@@ -1,3 +1,10 @@
+Summary of important user-visible changes for version 4.0:
+---------------------------------------------------------
+
+ ** Other new functions added in 4.0.0:
+
+      validateattributes
+
 Summary of important user-visible changes for version 3.8:
 ---------------------------------------------------------
 
